BlazorServerApp1/wwwroot/css/myStyles.css
body {
}

/*
#divMainContainer{
    display:inline-block;
}
*/

/* buttons */
#divMainMenuButtons, divMainForm {
    display: inline-block;
}

.buttonRed {
    width: 160px;
    height: 70px;
    color: white;
    background-color: rgb(255, 50, 0);
    border-color: darkblue;
    /* text-wrap: normal; */
    font-weight: bold;
    text-align: center;
    transition-duration: 0.4s;
}
.button {
    border: solid;
    border-color: darkblue;
    border-width:initial;   /* medium */
    width: 160px;
    height: 70px;
    color: blue;
    border-color: darkblue;
    /* text-wrap: normal; */
    font-weight: bolder;
    text-align: center;
    transition-duration: 0.4s;
}
.buttonActive {
    border: solid;
    border-color: darkblue;
    border-width: thick;
    width: 160px;
    height: 70px;
    color: white;
    border-color: darkblue;
    /* text-wrap: normal; */
    font-weight: bolder;
    text-align: center;
    transition-duration: 0.4s;
    background-color: rgb(0,120,255);
}
.backgroundGreen {
    background-color: rgb(121, 245, 121);
}
.buttonFilled {
    border:solid;
    border-color:darkblue;
    border-width:thin;
    width: 160px;
    height: 70px;
    color: black;
    font-weight: bold;
    border-color: blue;
    /* text-wrap: normal; */
    font-weight:bold;
    text-align: center;
    transition-duration: 0.4s;
    background-color: rgb(0, 200, 255);
}
.buttonDisabled {
    width: 160px;
    height: 70px;
    color: grey;
    border-color: grey;
    /* text-wrap: normal; */
    text-align: center;
    transition-duration: 0.4s;
    background: white; /* /linear-gradient(45deg, red, blue); */
}

.button:hover {
    background-color: blueviolet;
    color: yellow;
}

.float-right {
    float:right;
}

.tabPageTitle {
    float: right;
    color:blue;
    font-weight:bold;
    font-size:14px;
   /* border:solid;
    border-color:mediumpurple; 
    margin-top:10px;
    margin-bottom:10px;
    margin-right:30px;
    margin-left:30px;
    */
}
.rightLeftMargin {
    margin-right: 40px;
    margin-left: 40px;
}
.comment {
	width: 1000px; 
	  height: 30px; 
	  border: solid;
	  border-color: black; 
	  border-radius: 5px;
	  float: right;
}



input /* asp:TextBox */
{

}
/* input  type="submit" = button */


.label {
    border:thin;
    border-color: black;
    width: 30px;
    height :12px;
}
select /* asp:DropDownList */ {


}

table {
    border-collapse: separate;
    border-spacing: 0 15px;
}

th, td {
    /*
    padding-top: 5px;
    padding-bottom: 5px;
    */
    padding-left: 20px;
    padding-right: 20px;
    
    /*
    margin-top : 5px;
    margin-bottom : 5px;
    margin-left: 1px;
    margin-right : 1px;
    */
    font-size: 20px;
    color: blue;
    text-align: center;
}

.userControl {
    border:solid;
    border-color : black;
}

#contentArea ul {
    text-align: right;
}

    #contentArea ul li {
        float: none;
        display: inline-block;
    }
#TabContainerWingPlusHalf  {
    text-align: right;
}

#contentArea ul li {
    float: none;
    display: inline-block;
}
/*
    .tabDiv {
    display: inline-block;
    border: solid;
    border-color: black;
    -- 
    --width:2100px; 
    --height:200px; 
    --
     width: auto; 
}
*/

.menuButtonsDiv {
    display: inline-block;
    /* border: solid;
    border-color : black; */
    min-height : 1200px;
}
.mainFormDiv {
    display: inline-block;
    /*border: solid;
    border-color: black; */
    min-height: 1200px;
    min-width: 1000px;
}
.divNotActive {
    border: solid; 
    border-color: black; 
    border-radius: 10px;
    border-width : thin;
}
/*
.div1 {
    border: solid;
    border-color: black;
    border-radius: 10px;
    border-width: thin;
}
*/
.divActive {
    border: solid;
    border-color: black;
    border-radius: 10px;
    border-width:thick;
}


.hideproducts {
    display: none;
}
a {
    text-align:center;
}
.redBorder 
{
    border-color: red;
    outline: none;
}
.blackBorder {
    border-color: black;
    outline: none;
}

input:focus, select:focus, .inputstyle:focus {
    border: 3px solid blue;
}

/*
.tabHeader {
    float:right;
    border:solid;
    background-color : white;
    border-color:mediumpurple;
    color: mediumpurple;
}
*/

/*
.redTitle {
    color: red;
    font-weight: bold;
    font-size: 150%;
}
.redMessage {
    color: red;
    font-weight: bold;
    font-size: 180%;
}
*/

